# customClient

./: .gitignore  HUD_SYSTEM_DOCS.md  README.md  README_CN.md  RM2026_PROTOCOL_API.md  index.html  package-lock.json  package.json  rm-hud-layout.json  update_types.js  vite.config.ts  键鼠.md
docs/: HUD_COMPONENT_TEMPLATE.md  INFANTRY_UI_DEMO.md
plugins/: vite.electron.build.ts  vite.electron.dev.ts
src/: App.vue  background.ts  main.ts
src/assets/: base.css  main.css  md3-theme.css
src/components/: escMenu.vue  imageTransmission.vue
src/components/hud/: AllUnitStatusPanel.vue  AmmoCounter.vue  BuffList.vue  BufferPanel.vue  BulletPurchaseOverlay.vue  ControlHints.vue  CustomVideoTransmissionPanel.vue  DataInspectorPanel.vue  EventLog.vue  ExperiencePanel.vue  HUDContainer.vue  HUDTopBar.vue  HUDWidgetTemplate.vue  HealthPanel.vue  HeatRingHud.vue  HeroLobShotHud.vue  HeroModelPanel.vue  InputTelemetryPanel.vue  Minimap.vue  ModuleStatus.vue  PowerPanel.vue  RespawnOverlay.vue  StatusPanel.vue  TeamAssetPanel.vue  TripleRingHud.vue  hudStorage.ts  useHudDemo.ts
src/composables/: useCombatOverlay.ts
src/proto/: rm.proto  rm_pb.d.ts  rm_pb.js
src/router/: index.ts
src/services/: AutoTaskServices.ts  CustomByteBlockStream.ts  InputHandler.ts  MqttService.ts  VideoHandler.ts
src/stores/: globalData.ts  inputTelemetry.ts  robotData.ts  setting.ts  videoStats.ts
src/types/: rmType.ts
src/views/drone/: index.vue
src/views/engineer/: index.vue
src/views/hero/: index.vue
src/views/infantryFirst/: index.vue
src/views/infantrySecond/: index.vue
src/views/infantryThird/: index.vue
src/views/layout/: index.vue
src/views/setting/: KeyBinding.vue  RobotOptions.vue  index.vue
src/workers/: customVideoParser.worker.ts
video/bringup/: CMakeLists.txt  package.xml
video/bringup/launch/: sniper.launch.py
video/doorlock_decoder/: package.xml  setup.cfg  setup.py
video/doorlock_decoder/doorlock_decoder/: video_decoder_node.py
video/doorlock_sniper/: CMakeLists.txt  package.xml
video/doorlock_sniper/include/doorlock_sniper/: video_encoder_node.hpp
video/doorlock_sniper/msg/: VideoPacket.msg
video/doorlock_sniper/src/: video_encoder_node.cpp
video/hik_camera/: CMakeLists.txt  package.xml
video/hik_camera/config/: camera_6mm_MV-CS016-10UC.yaml
video/hik_camera/src/: hik_camera_node.cpp
